--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,8 @@ build:
   script:
     - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
     - cargo-bundle-licenses --format yaml --output THIRDPARTY.yml
+  missing_dso_whitelist:
+    - "$RPATH/ld64.so.1"  # [s390x]
   skip: True  # [py<38]
 
 requirements:
